<resources>
    <string name="app_name">Fuimonos Restaurante</string>
    <string name="log_in">Iniciá\nSesión</string>
    <string name="email">Correo electrónico</string>
    <string name="password">Contraseña</string>
    <string name="forgot_password">¿Olvidaste tu contraseña?</string>
    <string name="login">Entrar</string>
    <string name="without_account_yet">¿Aún no\ntenés una cuenta?</string>
    <string name="register_new_account">Registra una cuenta nueva</string>
    <string name="val_empty_email">Necesitamos tu correo</string>
    <string name="val_invalid_email">Este correo no es válido</string>
    <string name="welcome">¡Bienvenido!</string>
    <string name="name_required">Nombre*</string>
    <string name="email_required">Correo electrónico*</string>
    <string name="username_required">Usuario*</string>
    <string name="password_required">Contraseña*</string>
    <string name="entrance_required">Horario de Entrada*</string>
    <string name="departure_required">Horario de Salida*</string>
    <string name="birthday">Fecha de nacimiento</string>
    <string name="phonenumber_required">Número de celular*</string>
    <string name="sign_me_up">¡Registrame!</string>
    <string name="last_name_required">Apellido*</string>
    <string name="val_empty_name">Necesitamos tu nombre</string>
    <string name="val_emtpy_last_name">Necesitamos tu apellido</string>
    <string name="val_empty_password">Necesitamos tu contraseña</string>
    <string name="val_empty_phone_number">Necesitamos tu número de celular</string>
    <string name="recover_your_password">Recuperá\ntu contraseña</string>
    <string name="recovery_description">Confirmá tu correo electrónico y te enviaremos una nueva contraseña.</string>
    <string name="recover_password">Recuperar contraseña</string>
    <string name="ready">¡Listo!</string>
    <string name="recovery_success_description">No hay más que hacer aquí, ahora revisá tu correo electrónico.</string>
    <string name="login_app">Iniciar sesión</string>
    <string name="come_back">Regresar</string>
    <string name="no_internet_dialog_title">Elon, tenemos\nun problema...</string>
    <string name="no_internet_dialog_main_description">No tenés conexión a internet</string>
    <string name="no_internet_dialog_secondary_description">Por favor revisa tu conexión</string>
    <string name="unknown_error_dialog_title">Uhhh...</string>
    <string name="unknown_error_dialog_mainDescription">Pasó algo desconocido</string>
    <string name="unknown_error_dialog_secondaryDescription">Ocurrió un error inesperado, contáctese con nosotros para darle soporte</string>
    <string name="what_will_you_eat_today">¿Qué vas\na comer hoy?</string>
    <string name="search">Buscar</string>
    <string name="home">Inicio</string>
    <string name="shopping_cart">Carrito de compra</string>
    <string name="options">Opciones</string>
    <string name="x_restaurants">%d restaurantes</string>
    <string name="minimal_mount">Monto\nmínimo</string>
    <string name="add">Agregar</string>
    <string name="tomar_pedido">Tomar Pedido</string>
    <string name="entregar_pedido">Pedido Entregado</string>
    <string name="price_x">\u0024%.2f</string>
    <string name="select_complements">Seleccioná complementos</string>
    <string name="minus_sign">—</string>
    <string name="plus_sign">+</string>
    <string name="initial_number_picker_value">1</string>
    <string name="add_to_shopping_cart">Agregar a carrito</string>
    <string name="empty_shopping_cart_title">Aquí no hay nada,\ncreí que teníamos hambre...</string>
    <string name="your_cart_is_empty">Tu carrito está vacío</string>
    <string name="empty_shopping_cart_description">Haz un pedido para visualizar tus ordenes</string>
    <string name="my_profile_option">Mi perfil</string>
    <string name="wallet_option">Billetera</string>
    <string name="adresses_option">Direcciones</string>
    <string name="my_orders_option">Mis órdenes</string>
    <string name="favorites_option">Tus Favoritos</string>
    <string name="support_option">Soporte</string>
    <string name="contact_us_option">Contactanos</string>
    <string name="track_your_order_option">Seguí tu pedido</string>
    <string name="log_out_option">Cerrar sesión</string>
    <string name="change_password">Cambiar contraseña</string>
    <string name="bad_pasword">Contraseña incorrecta</string>
    <string name="bad_username">Este correo es incorrecto o no esta registrado</string>
    <string name="bad_signin">El nombre de usaurio/correo ya esta registrado, intentalo de nuevo</string>
    <string name="hello_x">Hola %s!</string>
    <string name="huy_x">¡Huy!</string>
    <string name="uhh_x">Uhhh...</string>
    <string name="Registered_title">!Yeih¡</string>
    <string name="oh_no_x">Oh no!</string>
    <string name="Registered_summary">Bienvenido a Fuimonos</string>
    <string name="Registered_summary_driver">Bienvenido a Fuimonos Driver</string>
    <string name="current_password_required">Contraseña actual*</string>
    <string name="new_password_required">Nueva contraseña*</string>
    <string name="confirm_password_required">Confirmar contraseña*</string>
    <string name="val_empty_current_pass">Necesitamos tu contraseña actual</string>
    <string name="val_empty_new_pass">Necesitamos tu nueva contraseña</string>
    <string name="val_empty_confirm_pass">Necesitamos que confirmes tu contraseña nueva</string>
    <string name="val_pass_not_equals">Las contraseñas no coinciden</string>
    <string name="next">Continuar</string>
    <string name="dominino">http://18.208.181.148:9090</string>
    <string name="facebook_app_id">349272656116139</string>
    <string name="fb_login_protocol_scheme">fb349272656116139</string>
    <string name="title_activity_location">Map</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_principal_restaurante">PrincipalRestaurante</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Pedidos</string>
    <string name="menu_gallery">Platillos</string>
    <string name="menu_slideshow">Pedido a Revisar </string>
    <string name="add_shop">Continuar Comprando</string>
    <string name="terminate_shop">Enviar Pedido</string>

    <string name="order_processed">¡Tu orden ha sido procesada!</string>
    <string name="order_not_processed">Uhh, se nos atoró el hamster...</string>
    <string name="order_in_way">Tu orden va en camino</string>
    <string name="order_not_in_way">Error 404</string>
    <string name="order_in_apg">Procedemos el cobro y despacho de tu orden</string>
    <string name="order_not_in_apg">Parece haber un error con tu pago. Por favor revisa tu forma de pago e intentalo de nuevo</string>

</resources>