<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/passDialogerror"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_vertical|center_horizontal"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/asdasd"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:layout_alignParentTop="true"
            android:src="@drawable/ic_dialog_header_background"
            app:layout_constraintDimensionRatio="w,1:1"
            tools:srcCompat="@tools:sample/avatars" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvTitle"
            style="@style/TextViewTitleStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imageView"
            android:layout_marginTop="13dp"
            android:includeFontPadding="false"
            android:text="@string/huy_x" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivLock"
            android:layout_width="match_parent"
            android:layout_height="140dp"
            android:layout_below="@+id/tvTitle"
            android:layout_marginTop="1dp"
            android:src="@drawable/ic_lock"
            app:layout_constraintEnd_toEndOf="@+id/tvTitle"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/tvTitle"
            app:layout_constraintTop_toBottomOf="@+id/tvTitle" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ivLock"
            android:layout_gravity="center"
            android:layout_marginTop="21dp"
            android:gravity="center"
            android:text="@string/bad_pasword"
            android:textColor="@color/purple"
            android:textSize="20dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView2"
            android:layout_gravity="center"
            android:layout_marginTop="13dp"
            android:gravity="center"
            android:text="@string/recover_password"
            android:textColor="@color/purple" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnClosePassErr"
            style="@style/PrimaryButtonStyle"
            android:layout_width="173dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView3"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_gravity="center"
            android:layout_marginStart="76dp"
            android:layout_marginTop="22dp"
            android:layout_marginEnd="71dp"
            android:paddingStart="@dimen/space_4x"
            android:paddingEnd="@dimen/space_4x"
            android:text="@string/come_back" />
    </RelativeLayout>


</LinearLayout>