<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/TextViewTitleStyle"
            android:id="@+id/tvTitle"
            android:includeFontPadding="false"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_4x"
            android:layout_marginTop="@dimen/space_4x"
            android:layout_marginEnd="@dimen/space_4x"
            android:text="@string/recover_your_password"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivLock"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/space_4x"
            android:layout_marginBottom="@dimen/space_4x"
            android:src="@drawable/ic_lock"
            app:layout_constraintStart_toStartOf="@+id/tvTitle"
            app:layout_constraintTop_toBottomOf="@+id/tvTitle"
            app:layout_constraintEnd_toEndOf="@+id/tvTitle"
            app:layout_constraintBottom_toTopOf="@+id/tvRecoveryDescription" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvRecoveryDescription"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/recovery_description"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/purple"
            app:layout_constraintStart_toStartOf="@+id/tvTitle"
            app:layout_constraintTop_toBottomOf="@+id/ivLock"
            app:layout_constraintEnd_toEndOf="@+id/tvTitle"
            app:layout_constraintBottom_toTopOf="@+id/inputEmail"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputEmail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_2x"
            app:boxBackgroundColor="@color/opaquePurple"
            android:hint="@string/email"
            app:errorEnabled="true"
            app:layout_constraintStart_toStartOf="@+id/tvTitle"
            app:layout_constraintTop_toBottomOf="@+id/tvRecoveryDescription"
            app:layout_constraintEnd_toEndOf="@+id/tvTitle"
            app:layout_constraintBottom_toTopOf="@+id/btnRecoverPassword">

            <com.google.android.material.textfield.TextInputEditText
                style="@style/EditTextCompactSpacingStyle"
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:imeOptions="actionNext"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            style="@style/PrimaryButtonStyle"
            android:id="@+id/btnRecoverPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/space_10x"
            android:layout_marginTop="@dimen/space_4x"
            android:text="@string/recover_password"
            app:layout_constraintStart_toStartOf="@+id/tvTitle"
            app:layout_constraintTop_toBottomOf="@+id/inputEmail"
            app:layout_constraintEnd_toEndOf="@+id/tvTitle"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
